# Tp_iz2

./: .travis.yml  CMakeLists.txt  README.md
MyLibs/: CMakeLists.txt  find_sum.h
MyLibs/dynamic/: CMakeLists.txt  parallel_find_sum.cpp
MyLibs/static/: CMakeLists.txt  common_find_sum.cpp
executable/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
